# http-server-cli

./: .gitignore  .hermes-project.yaml  .review-level.yaml  AUDITLOG.md  CHANGELOG.md  CNAME  LICENSE  MANIFEST.in  README.en.md  README.md  README.zh.md  features.md  http-server-cli.spec.yaml  index.html  index.zh.html  pyproject.toml  release-local.sh  release-pypi.sh  review-log.md  setup.sh
.github/workflows/: release.yml
documents/: bookmark-feature-design-v1.0-20250715.md  bookmark-feature-design-v1.1-20250715.md  ci-cd-recommendation.md  english-sentences.md  features.md  github-ci-cd-recommendation.md  hs-cli-design.md  hs-dashboard-design.md  hs-mcp-design.md  knowledge.md  perf-hot-path-optimization-design-v1.1-20260722.md  ports-detect-design-v1.1-20250716.md  pypi-release-checklist.md  pypi-release-steps.md  skill-cn-en-language-toggle.md  skill-github-corner-link.md  skill-light-dark-theme-toggle.md  test-design-spec.md  url-flag-design-v1.0-20250715.md  url-flag-design-v2.0-20250715.md
scripts/: hs-mcp-demo.py  hs-mcp-demo.sh  release-local.sh  release-pypi.sh
src/http_server_cli/: __init__.py  __main__.py  bookmark.py  cli.py  config.py  dashboard.en.html  dashboard.html  dashboard.py  handler.py  history.py  mcp.py  registry.py  registry_managed.py  runner.py  server.py  utils.py
tests/: conftest.py  test_bookmark.py  test_cli.py  test_config.py  test_dashboard.py  test_handler.py  test_history.py  test_mcp.py  test_registry.py  test_registry_managed.py  test_server.py  test_utils.py
