[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "http-server-cli"
dynamic = ["version"]
description = "本地 HTTP 服务管理器 — 基于 python3 -m http.server"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "Jaden Li"},
]
keywords = ["http-server", "static-server", "cli", "dev-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: MacOS",
    "Topic :: Utilities :: HTTP Servers",
]

[project.urls]
Homepage = "https://www.jaden.tech"
Source = "https://github.com/imjaden/http-server-cli"
BugTracker = "https://github.com/imjaden/http-server-cli/issues"

[project.scripts]
hs = "http_server_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "http_server_cli.__version__"}

[tool.setuptools.package-data]
http_server_cli = ["py.typed"]
"*" = ["*.spec.yaml"]

[tool.setuptools]
zip-safe = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "spec(name): 关联 OpenSpec 需求 ID",
]

[tool.coverage.run]
source = ["http_server_cli"]
